# hashnfv-escalator

./: .gitreview  INFO
api/: AUTHORS  ChangeLog  pylintrc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api/escalator/: context.py  i18n.py  notifier.py  opts.py  version.py
api/escalator/api/: policy.py  versions.py
api/escalator/api/middleware/: context.py
api/escalator/api/v1/: clusters.py  controller.py  install.py  router.py  versions.py
api/escalator/cmd/: __init__.py  api.py
api/escalator/common/: auth.py  client.py  config.py  exception.py  rpc.py  utils.py  wsgi.py
api/escalator/installer/daisy/: api.py
api/etc/: escalator-api-paste.ini  escalator-api.conf  policy.json  property-protections-policies.conf.sample  property-protections-roles.conf.sample
api/etc/oslo-config-generator/: escalator-api.conf
ci/: build.sh
ci/build_rpm/: Dockerfile  build_rpms.sh  build_rpms_docker.sh
client/: AUTHORS  ChangeLog  MANIFEST.in  PKG-INFO  README.rst  run_tests.sh  setup.cfg  tox.ini
doc/: 00-Authors.rst  01-Scope.rst  02-Background_and_Terminologies.rst  03-Functional_Requirements.rst  04-Use_Cases_and_Scenarios.rst  05-Reference_Architecture.rst  06-Information_Flows.rst  08-Requirements_from_other_OPNFV_Project.rst  09-Reference.rst  10-Useful_Working_Drafts_of_ETSI_NFV.rst  A1-Appendix.rst  Escalator_Requirement.rst
docker/: Dockerfile
docs/: 01-Scope.rst  02-Background_and_Terminologies.rst  04-Use_Cases_and_Scenarios.rst  05-Reference_Architecture.rst  07-Interfaces_and_Files.rst  09-Reference.rst  index.rst
(+46 files in other folders)
