[metadata]
name = escalator
summary = OPNFV smooth upgrade service
description-file =
        README.rst
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = http://www.opnfv.org/
classifier =
        Environment :: OPNFV
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7

[files]
data_files =
    /etc/escalator = etc/*
    /var/log/escalator =

[global]
setup-hooks =
         pbr.hooks.setup_hook

[entry_points]
console_scripts =
        escalator-api = escalator.cmd.api:main
oslo.config.opts =
        escalator.api = escalator.opts:list_api_opts

[build_sphinx]
all_files = 1

[compile_catalog]
directory = escalator/locale
domain = escalator

[update_catalog]
domain = escalator
output_dir = escalator/locale
input_file = escalator/locale/escalator.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = escalator/locale/escalator.pot

